--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-html {
+body {
   color: #222;
   background: #eee;
 }
